welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:5: error: '(' expected but identifier found.
  while !arrive(){
        ^ColumnByColumn:11: error: illegal start of simple expression
}
^