welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
  var x=0
  var y=0
  val x2=getMondeLargeur()
  val y2=getMondeHauteur()
  while !arrive(){
    ecritMessage(i)
    y=y+1
    if (y==y2) {y=0;x=x+1}
    setPos(x,y)
  }
}

def arrive ():Boolean ={
  val x=getX()
  val y=getY()
  val x2=getMondeLargeur()
  val y2=getMondeHauteur()
  return ((x==x2)&&(y==y2))
}